--- a/tesseract_collision/test/CMakeLists.txt
+++ b/tesseract_collision/test/CMakeLists.txt
@@ -35,6 +35,9 @@ macro(add_gtest test_name test_file)
             ${LIBFCL_LIBRARIES})
   target_compile_options(${test_name} PRIVATE ${TESSERACT_COMPILE_OPTIONS_PRIVATE} ${TESSERACT_COMPILE_OPTIONS_PUBLIC})
   target_compile_definitions(${test_name} PRIVATE ${TESSERACT_COMPILE_DEFINITIONS})
+  if(TESSERACT_COLLISION_COAL_ENABLE_COAL_CAST_TESTS)
+    target_compile_definitions(${test_name} PRIVATE TESSERACT_COLLISION_COAL_ENABLE_COAL_CAST_TESTS)
+  endif()
   target_cxx_version(${test_name} PRIVATE VERSION ${TESSERACT_CXX_VERSION})
   target_clang_tidy(${test_name} ENABLE ${TESSERACT_ENABLE_CLANG_TIDY})
   target_code_coverage(
